cmake_minimum_required(VERSION 2.6)
project(SKYNET)

#MESSAGE
message(STATUS "This is SOURCE dir " ${SKYNET_SOURCE_DIR})

set(PROJECT_CFLAGS "-std=gnu99 -fPIC -O0 -Wall -g -ggdb -m64 -D_X64")
set(PROJECT_LINKFLAGS "-Wl,--no-undefined -Wl,--as-needed")

set(PROJECT_DEBUG_CFLAGS "-D_DEBUG -DDEBUG")
set(PROJECT_RELEASE_CFLAGS "-DNDEBUG -O6")
    
set(PROJECT_DEBUG_LINKFLAGS "")
set(PROJECT_RELEASE_LINKFLAGS "")

set(CMAKE_C_FLAGS ${PROJECT_CFLAGS} CACHE STRING "" FORCE)
set(CMAKE_C_FLAGS_DEBUG ${PROJECT_DEBUG_CFLAGS} CACHE STRING "" FORCE)
set(CMAKE_C_FLAGS_RELEASE ${PROJECT_RELEASE_CFLAGS} CACHE STRING "" FORCE)
  
set(CMAKE_EXE_LINKER_FLAGS_DEBUG "${PROJECT_LINKFLAGS} ${PROJECT_DEBUG_LINKFLAGS}" CACHE STRING "" FORCE)
set(CMAKE_EXE_LINKER_FLAGS_RELEASE "${PROJECT_LINKFLAGS} ${PROJECT_RELEASE_LINKFLAGS}" CACHE STRING "" FORCE)

aux_source_directory(${SKYNET_SOURCE_DIR}/. MAIN_SRC)

link_directories(${SKYNET_SOURCE_DIR}/../bin/lib)

set(EXECUTABLE_OUTPUT_PATH ${SKYNET_SOURCE_DIR}/../bin)

add_executable(skynet ${MAIN_SRC})

target_link_libraries(skynet rt m dl pthread)